<resources>
    <string name="app_name">Stoke</string>
    <string name="stoke_score">Stoke Score</string>
    <string name="temperature_1s">Temperature: %1$s</string>
    <string name="humidity_1_s">Humidity: %1$s</string>
    <string name="weather">Weather</string>
    <string name="surf_report">Surf Report</string>
    <string name="swell_height">Swell Height: %1$s - %2$s %3$s</string>
    <string name="wind_speed">Wind: %1$s %2$s</string>
    <string name="select_location">Select Location</string>
    <string name="location">Location</string>
    <string name="weights">Weights</string>
    <string name="app_version">App Version: %1$s</string>
    <string name="units">Units</string>
    <string name="configure_weights">Configure Weights</string>
    <string name="weights_instructions">Personalize how Stoke calculates the beach rating by adjusting what factors are most important to you.</string>
    <string name="save">Save</string>
    <string name="units_instructions">Configure the units data is displayed as.</string>
    <string name="configure_units">Configure Units</string>
    <string name="temperature">Temperature</string>
    <string name="wind_units">Wind Units</string>
    <string name="temperature_units">Temperature Units</string>
    <string name="stoke">STOKE</string>
    <string name="stoke_pitch">Live beach reports at your fingertips.</string>
    <string name="how_stoke_works">How Stoke Works</string>
    <string name="onboarding_two_description">Stoke aggregates marine and weather data to give you beach reports in real time.</string>
    <string name="get_started">Get Started</string>
    <string name="hang_loose">Hang Loose</string>
    <string-array name="temperature_units">
        <item>Fahrenheit</item>
        <item>Celsius</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="wind_units">
        <item>m/s</item>
        <item>mph</item>
    </string-array>
</resources>
