<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.stokeapp.stoke.dashboard.MainActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/stokeScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stoke_score"
                android:textSize="22sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/din_medium"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="72sp"
                tools:text="7.9"
                android:textColor="@color/black"
                android:fontFamily="@font/din_medium"
                app:layout_constraintTop_toBottomOf="@id/stokeScoreText"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather"
                android:fontFamily="@font/din_medium"
                android:textColor="@color/black"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/mainDescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/temperatureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_1s"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/humidityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity_1_s"
                android:textSize="22sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surf_report"
                android:fontFamily="@font/din_medium"
                android:textColor="@color/black"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/swellHeightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swell_height"
                android:textSize="22sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
