<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:navigationIcon="@drawable/ic_arrow_back_white"
        app:title="Settings"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:id="@+id/settingsScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settingLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/settings_item_vertical_padding"
                android:paddingBottom="@dimen/settings_item_vertical_padding"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="@dimen/settings_item_text_size" />

            <TextView
                android:id="@+id/settingsWeights"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/settings_item_vertical_padding"
                android:paddingBottom="@dimen/settings_item_vertical_padding"
                android:text="@string/weights"
                android:textColor="@color/black"
                android:textSize="@dimen/settings_item_text_size" />

            <TextView
                android:id="@+id/appVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/settings_item_vertical_padding"
                android:paddingBottom="@dimen/settings_item_vertical_padding"
                android:text="@string/app_version"
                android:textSize="@dimen/settings_item_text_size" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>